--- a/app/views/recall/inc_online-marketplaces.html
+++ b/app/views/recall/inc_online-marketplaces.html
@@ -35,7 +35,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="marketplace-5" name="market" type="radio" value="marketplace-5">
               <label class="govuk-label govuk-radios__label" for="marketplace-5">
-                Etsy.com
+                etsy.com
               </label>
             </div>
             <div class="govuk-radios__item">
