--- a/app/views/recall/inc_online-marketplaces.html
+++ b/app/views/recall/inc_online-marketplaces.html
@@ -23,7 +23,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="marketplace-3" name="market" type="radio" value="marketplace-3">
               <label class="govuk-label govuk-radios__label" for="marketplace-3">
-                Aliexpress.com
+                aliexpress.com
               </label>
             </div>
             <div class="govuk-radios__item">
