--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,8 +11,13 @@
     <div class="govuk-grid-column-two-thirds govuk-!-padding-bottom-9">
 
 
-      <h1 class="govuk-heading-l">PSD/COS prototypes/designs v2,1</h1>
+      <h1 class="govuk-heading-l">Product Safety Database (PSD) prototypes</h1>
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible" style="margin-bottom: 140px;">
+
+
+      <p><a href="psd-revised-flow/inner-home-page/home-02">Home</a></p>
+
+      <p><a href="prism/prism-dashboard">Prism dashboard</a></p>
 
  
 
