--- a/app/views/layout-psd-menu_home.html
+++ b/app/views/layout-psd-menu_home.html
@@ -110,6 +110,9 @@
           <li class="psd-header__navigation-item">
             <a class="psd-header__link" href="new-products-example_your_products-new">Products</a>
           </li>
+            <li class="psd-header__navigation-item">
+            <a class="psd-header__link" href="new-products-example_your_products-new">Product risk assessments</a>
+          </li>
           <li class="psd-header__navigation-item psd-header__navigation-item--right">
             <a class="psd-header__link" href="#">Your team</a>
           </li>
