Tweaks to PRISM/PSD integration

--- a/app/views/layout-psd-menu_home.html
+++ b/app/views/layout-psd-menu_home.html
@@ -102,10 +102,10 @@
             <a class="psd-header__link" href="../../../psd-revised-flow/inner-home-page/home-02">Home</a>
           </li>
           <li class="psd-header__navigation-item">
-            <a class="psd-header__link" href="new-cases-example_your_cases-new">Cases</a>
+            <a class="psd-header__link" href="#">Cases</a>
           </li>
           <li class="psd-header__navigation-item ">
-            <a class="psd-header__link" href="new-businesses-example_your_businesses-new">Businesses</a>
+            <a class="psd-header__link" href="#">Businesses</a>
           </li>
           <li class="psd-header__navigation-item">
             <a class="psd-header__link" href="../../../psd-products-area/all-products.html">Products</a>
