--- a/app/views/prism/case-assessments-dash.html
+++ b/app/views/prism/case-assessments-dash.html
@@ -18,27 +18,58 @@ Home
     <div class="govuk-grid-column-full">
 
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds opss-desktop-min-height--s">
-                <span class="govuk-caption-m">All in All+ Car Seat, Dragon Kingdom CT4262</span>
+            <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
+                <span class="govuk-caption-l">Rotation platform failure case: 6449-2312</span>
                 <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-                    Add a risk assessment
+                    Add risk assessment
                 </h1>
 
                 <div class="app-summary-card">
-      <p class="govuk-!-margin-bottom-0">To</p>
-      <p class="govuk-body-l">Rotation platform case 6449-2312</p>
+      <p class="govuk-!-margin-bottom-0">For</p>
+      <p class="govuk-body-l">All in All+ Car Seat, Dragon Kingdom CT4262</p>
     </div>
 
-                <p class="govuk-body govuk-!-margin-bottom-7">
+    <h2 class="govuk-heading-m">Related risk assessments</h2>
+
+    <p class="govuk-body">Select an existing product risk assessment to add to the case. If you find that the assessment doesn't fit your case, you have the option to start a new assessment.</p>
+
+               <table class="govuk-table govuk-!-margin-bottom-8">
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header">Assessment name</th>
+      <th scope="col" class="govuk-table__header">Created by</th>
+      <th scope="col" class="govuk-table__header">Last updated</th>
+      <th scope="col" class="govuk-table__header"><!-- Actions --></th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+
+    <tr class="govuk-table__row">
+      <th class="govuk-table__cell">Buckle failure</th>
+      <td class="govuk-table__cell">Dimitri Koksharov <br/>Warwickshire County Council</td>
+      <td class="govuk-table__cell">23 April 2023</td>
+      <td class="govuk-table__cell"><a href="view-existing-assessment">View</a> | <a href="#">Select</a>
+    </tr>
+
+  </tbody>
+</table>
+
+                <!-- <p class="govuk-body govuk-!-margin-bottom-7">
                     These are no risk assessments for this product and any cases associated with it.
-                </p>
+                </p> -->
+
             </div>
 
         </div>
 
-        <a href="../../prism/question-serious-risk" class="govuk-button" data-module="govuk-button">
-  Start a new risk assessment
-</a>
+<div class="govuk-button-group">
+  <a href="../psd-revised-flow/case-trading-stds-landing-ra-added.html" class="govuk-button" data-module="govuk-button">
+    Add
+  </a>
+  <a href="../../prism/question-serious-risk" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+    Start a new risk assessment
+  </a>
+</div>
 
     </div>
 </div>
