--- a/app/views/prism/prism-dashboard.html
+++ b/app/views/prism/prism-dashboard.html
@@ -65,7 +65,7 @@ Home
       <td class="govuk-table__cell">  <strong class="govuk-tag govuk-tag--green" id="company-information-status">Submitted</strong></td>
       <td class="govuk-table__cell"><a href="view-existing-assessment">View assessment</a>
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-        <a href="assign-to-case">Assign to a case</a></td>
+        <a href="assign-to-case">Add to a case</a></td>
     </tr>
 
   </tbody>
