--- a/app/views/prism/view-existing-assessment.html
+++ b/app/views/prism/view-existing-assessment.html
@@ -348,7 +348,7 @@
 
         <div class="govuk-button-group">
   <a href="assign-to-case.html" class="govuk-button" data-module="govuk-button">
-    Assign to a case
+    Add to a case
   </a>
   <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Create a new product case
