--- a/app/views/psd-products-area/all-products.html
+++ b/app/views/psd-products-area/all-products.html
@@ -40,7 +40,7 @@
 
     <div class="govuk-grid-column-one-third">
       <div class="opss-text-align-right govuk-!-margin-bottom-8">
-          <a href="psd-revised-flow/create-a-product-record.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+          <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
               Create a product record
           </a>            
       </div>
