--- a/app/views/psd-products-area/psd-product-search.html
+++ b/app/views/psd-products-area/psd-product-search.html
@@ -11,7 +11,7 @@
     <div class="govuk-grid-column-two-thirds opss-desktop-min-height--s"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-            Search for the product
+            All products – Search
         </h1>
 
         <p class="govuk-body opss-secondary-text">
