--- a/app/views/psd-revised-flow/inc_products_pg_cases-ra.html
+++ b/app/views/psd-revised-flow/inc_products_pg_cases-ra.html
@@ -1,7 +1,7 @@
                 <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--sm-font opss-summary-list-mixed--4-cols">
                     <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing">
+                        <a class="govuk-link govuk-link--no-visited-state" href="#">
                            Labelling issues
                         </a><br/><span style="font-weight:normal">2101-0008</span>
                     </dt>
@@ -19,7 +19,7 @@
 
                     <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing">
+                        <a class="govuk-link govuk-link--no-visited-state" href="#">
                             Buckle failure</a>
                             <br/><span style="font-weight:normal">6449-2311</span>
                         </a>
@@ -37,7 +37,7 @@
 
                     <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing">
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-add-ra">
                             Rotation platform failure</a>
                             <br/><span style="font-weight:normal">6449-2312</span>
                         </a>
