--- a/app/views/psd-revised-flow/inc_top_nav_2.html
+++ b/app/views/psd-revised-flow/inc_top_nav_2.html
@@ -45,10 +45,10 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Risk assessment&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(0<span class="govuk-visually-hidden"> added</span>)</span>
+                    Risk assessment&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(1<span class="govuk-visually-hidden"> added</span>)</span>
                 </dt>
                 <dd class="govuk-summary-list__actions">
-                    <a href="../../prism/case-assessments-dash" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                    <a href="../../prism/case-assessments-dash.html" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a risk assessment</span>
                     </a>
                 </dd>
