--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -29,10 +29,10 @@ href: "products"
 
     <div class="govuk-button-group govuk-!-padding-top-6 govuk-!-padding-left-9">
 
-                <a class="govuk-link" href="#"> Create a product case</a>
+                <a class="govuk-link" href="#"> Create a case</a>
 
  <a href="../../prism/question-serious-risk.html" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-    Start a new risk assessment
+    Start a risk assessment
   </a>
 
     </div>
@@ -63,7 +63,7 @@ href: "products"
                     </li>
                     <li>
                         <a href="#accordion-default-heading-3" class="govuk-link govuk-link--no-visited-state">
-                            <span class="govuk-visually-hidden">Related</span> Cases <span>(2)</span>
+                            <span class="govuk-visually-hidden">Related</span> Cases <span>(3)</span>
                         </a>
                     </li>
                 </ul>
