--- a/app/views/prism/confirmation-ra.html
+++ b/app/views/prism/confirmation-ra.html
@@ -18,7 +18,7 @@
         html: "Assessment reference number<br><strong>2306-0005</strong>"
       }) }}
 
-      <p>Your sucessfully added the risk assessment to All in All + Car Seat, Dragon Kingdom CT4262.</p>
+      <p>You have sucessfully added the risk assessment to All in All + Car Seat, Dragon Kingdom CT4262.</p>
 
       <h2 class="govuk-heading-m">
         Next steps
@@ -27,7 +27,7 @@
 
         <ul class="govuk-list">
 
-          <li><a href="prism-dashboard" class="govuk-link">View</a>, <a href="#">edit</a> or <a href="#">assign the assessment to a case study</a>.</li>
+          <li><a href="prism-dashboard" class="govuk-link">View</a> or <a href="prism-dashboard" >assign the assessment to a case study</a>.</li>
 
 
                  <li><a href="#" class="govuk-link"></li>
