--- a/app/views/psd-revised-flow/case-trading-stds-landing-ra-added.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-ra-added.html
@@ -13,6 +13,22 @@ href: "cases"
 
 {% block content %}
 
+<div class="govuk-notification-banner govuk-notification-banner--success" role="alert"
+  aria-labelledby="govuk-notification-banner-title"
+  data-module="govuk-notification-banner">
+  <div class="govuk-notification-banner__header">
+    <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+      Success
+    </h2>
+  </div>
+  <div class="govuk-notification-banner__content">
+    <h3 class="govuk-notification-banner__heading">
+      <span style="font-weight:normal">The <a href="#">buckle failure risk assessment</a> has now been added to the case.</span>
+    </h3>
+  </div>
+</div>
+
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
 
@@ -63,7 +79,98 @@ href: "cases"
 
          <h3 class="govuk-heading-m">Rotation platform failure </h3>
 
-        {% include "psd-revised-flow/inc_top_nav_2.html" %}
+            <section class="govuk-grid-column-full govuk-!-padding-top-3 govuk-!-padding-bottom-1 opss-desktop-padding-top-3 opss-desktop-padding-bottom-4 govuk-!-padding-right-3 govuk-!-padding-left-3 opss-border-all opss-grey-bg opss-3-col-flow opss-responsive-margin-bottom-6">
+
+        <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-0 opss-summary-list-mixed opss-summary-list-mixed--sm">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Product&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(1<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="/psd-revised-flow/add-a-product" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a product</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Business&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(2<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a business</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Image&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(3<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> an image</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Accident / Incident&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(2<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> an accident or incident</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Corrective action&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(1<span class="govuk-visually-hidden"> added</span>)</span>
+                </dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a corrective action</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Risk assessment&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(2<span class="govuk-visually-hidden"> added</span>)</span>
+                </dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a risk assessment</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Correspondence&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(3<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a correspondence</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Test result&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(0<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a test result</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Other supporting <br class="opss-br-desktop">information&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(1<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a document or attachment</span>
+                    </a>   <!-- this link goes to the current form page listing the 5x options of type of information -->
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Comment           <!-- number count is not included for comments -->
+                </dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a comment</span>
+                    </a>
+                </dd>
+            </div>
+        </dl>
+    </section>
+
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Case overview</h2>
 
