--- a/app/views/psd-revised-flow/inc_products_pg_cases.html
+++ b/app/views/psd-revised-flow/inc_products_pg_cases.html
@@ -1,7 +1,7 @@
                 <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--sm-font opss-summary-list-mixed--4-cols">
                     <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing">
+                        <a class="govuk-link govuk-link--no-visited-state" href="#">
                            Labelling issues
                         </a><br/><span style="font-weight:normal">2101-0008</span>
                     </dt>
@@ -19,7 +19,7 @@
 
                     <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing">
+                        <a class="govuk-link govuk-link--no-visited-state" href="#">
                             Buckle failure</a>
                             <br/><span style="font-weight:normal">6449-2311</span>
                         </a>
@@ -28,7 +28,7 @@
                         <a href="../../prism/view-existing-assessment.html">Buckle failure risk assessment</a>
                     </dd>
                     <dd class="govuk-summary-list__value">
-                        Wawrickshire County Council Trading standards office
+                        Warwickshire County Council
                     </dd>                     
                     <dd class="govuk-summary-list__actions">
                         <span class="opss-tag opss-tag--plain">Case open</span>
@@ -46,7 +46,7 @@
                         No assessments
                     </dd>
                     <dd class="govuk-summary-list__value">
-                        Wawrickshire County Council Trading standards office
+                        Warwickshire County Council
                     </dd>
                     <dd class="govuk-summary-list__actions">
                         <span class="opss-tag opss-tag--plain">Case open</span>
