--- a/app/views/psd-revised-flow/product-page-ra-assigned.html
+++ b/app/views/psd-revised-flow/product-page-ra-assigned.html
@@ -24,7 +24,7 @@ href: "products"
   </div>
   <div class="govuk-notification-banner__content">
     <h3 class="govuk-notification-banner__heading">
-      <span style="font-weight:normal">The <a href="#">buckle failure risk assessment</a> has now been assigned to the <a href="#">rotation platform failure </a> case.</span>
+      <span style="font-weight:normal">The <a href="#">buckle failure risk assessment</a> has now added to the <a href="#">rotation platform failure </a> case.</span>
     </h3>
   </div>
 </div>
@@ -78,7 +78,7 @@ href: "products"
                     </li>
                     <li>
                         <a href="#accordion-default-heading-3" class="govuk-link govuk-link--no-visited-state">
-                            <span class="govuk-visually-hidden">Related</span> Cases <span>(2)</span>
+                            <span class="govuk-visually-hidden">Related</span> Cases <span>(3)</span>
                         </a>
                     </li>
                 </ul>
@@ -310,7 +310,7 @@ protocol and contain components that can potentially become defective.
 
                     <div class="govuk-grid-row">
                         <div class="govuk-grid-column-two-thirds">
-                            <p class='govuk-body opss-secondary-text'>This product record has been added to 2 cases.</p>
+                            <p class='govuk-body opss-secondary-text'>This product record has been added to 3 cases.</p>
                             <!--Show list with newest cases first-->
 
                         </div>
