Tweaks to new user journey

--- a/app/views/prism/task-list-v2.html
+++ b/app/views/prism/task-list-v2.html
@@ -414,17 +414,18 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
     {% endif %}
 
-
-
-
-
+     <p style="margin-left: 25px;"><a href="../prism/check-existing-product-assessment">Check your product risk assessment</a></p>
 
 
   </ol>
 
 
 
+
+
 </div>
+
+
 </div>
 
       <!--
