--- a/app/views/includes/sales-safety.html
+++ b/app/views/includes/sales-safety.html
@@ -4,37 +4,46 @@
       Name of the business that sold the product
     </dt>
     <dd class="govuk-summary-list__value">
-      {{ data['business-sold'] }}
+      Cossatto Limited
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="product-market-placement">
-
+        Change
       </a>
     </dd>
   </div>
+
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Total number of sold products
+      Estimated number of products in use
     </dt>
     <dd class="govuk-summary-list__value">
-      {% if checked("product-sold", "yes") %}
-
-      {{ data['number-products-sold'] }}
-
-      {% else %}
-
-      Unknown
-
-      {% endif %}
-
-
-
-
+      3000
     </dd>
-      <dd class="govuk-summary-list__actions">
+    <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="product-market-placement">
+        Change
+      </a>
+    </dd>
+  </div>
+
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Applicable product safety legislation and standards
+    </dt>
+      <dd class="govuk-summary-list__value">
+         – Regulation UN/ECE N. 44-04 <br/>
+        – General Product Safety Regulations 2005 <br/>
+        – BS EN 71 series <br/>
+        </ul>
+    </dd>
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="product-market-placement">
+        Change
 
       </a>
     </dd>
   </div>
+
+
 </dl>
