--- a/app/views/prism/case-assessments-dash.html
+++ b/app/views/prism/case-assessments-dash.html
@@ -31,7 +31,7 @@ Home
 
     <h2 class="govuk-heading-m">Related risk assessments</h2>
 
-    <p class="govuk-body">Select an existing product risk assessment to add to the case. If you find that the assessment doesn't fit your case, you have the option to start a new assessment.</p>
+    <p class="govuk-body">Select a related risk assessment to add to the case. If you find that the assessment doesn't fit your case, you have the choice to either start a new assessment or attach the one you've previously created.</p>
 
                <table class="govuk-table govuk-!-margin-bottom-8">
   <thead class="govuk-table__head">
@@ -71,6 +71,7 @@ Home
   </a>
 </div>
 
+<p><a href="../../prism/attach-assessment">Attach existing risk assessment</a></p>
     </div>
 </div>
 
