--- a/app/views/psd-revised-flow/inc_top_nav_2.html
+++ b/app/views/psd-revised-flow/inc_top_nav_2.html
@@ -2,7 +2,7 @@
 
         <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-0 opss-summary-list-mixed opss-summary-list-mixed--sm">
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Product&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(1<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dt class="govuk-summary-list__key">Product&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(2<span class="govuk-visually-hidden"> added</span>)</span></dt>
                 <dd class="govuk-summary-list__actions">
                     <a href="/psd-revised-flow/add-a-product" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a product</span>
@@ -48,7 +48,7 @@
                     Risk assessment&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(1<span class="govuk-visually-hidden"> added</span>)</span>
                 </dt>
                 <dd class="govuk-summary-list__actions">
-                    <a href="../../prism/case-assessments-dash.html" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                    <a href="../../prism/case-many-products" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a risk assessment</span>
                     </a>
                 </dd>
